--- a/online-portfolio/index.html
+++ b/online-portfolio/index.html
@@ -3,54 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ifeanyi Eze Portfolio</title>
-   <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+<body>
+
 <div class="test">
-<div>
-<img src="./images/img.png", height="250"/>
-<h2>Summary</h2>
-<p>
-    My name is Ifeanyi Anthony Emereonyekwe, and I’m a DevOps Engineer specializing in streamlining development pipelines, automating infrastructure, and optimizing CI/CD workflows. I’ve worked extensively with tools such as Docker, Kubernetes, Terraform, Packer, Ansible, Vault, Git/GitHub, and GitHub Actions, as well as cloud platforms like AWS. My focus is on building scalable, secure systems and enhancing team efficiency through automation and best practices
-</p>
-<h2>Skills</h2>
-<ul>
-    <li>Linux</li>
-    <li>Git/Github</li>
-    <li>AWS</li>
-    <li>Terraform</li>
-    <li>Ansible</li>
-    <li>GitHub Actions</li>
-    <li>Packer</li>
-    <li>Vault</li>
-    <li>Docker</li>
-    <li>Kubernetes</li>
-    <li>EKS</li>
-    <li>Argocd</li>
-    <li>Security</li>
-    <li>Datadog</li>
-    <li> prometheus/grafana</li>
-    <li>Scripting</li>
-</ul>
-<h3>Projects</h3>
-<ol>
-    <li><a href="EBS-VOLUME.html">EBS VOLUME</a></li>
-    <li>SERVER RESCUE USING EBS CONCEPT</li>
-    <li>CONFIGURE VPC ENDPOINT</li>
-    <li>VPC PEERING</li>
-    <li>EFS FILE SYSTEM</li>
-    <li>ANSIBLE MODULES</li>
-</ol>
-<a href="Hobbies.html">Hobbies</a>
-<br>
-<a href="Contact.html">Contact</a>
+    <div>
+        <img src="./images/img.png" height="250" />
+        <h2>Summary</h2>
+        <p>
+            My name is Ifeanyi Anthony Emereonyekwe, and I’m a DevOps Engineer specializing in streamlining development pipelines, automating infrastructure, and optimizing CI/CD workflows. I’ve worked extensively with tools such as Docker, Kubernetes, Terraform, Packer, Ansible, Vault, Git/GitHub, and GitHub Actions, as well as cloud platforms like AWS. My focus is on building scalable, secure systems and enhancing team efficiency through automation and best practices.
+        </p>
+
+        <h2>Skills</h2>
+        <ul>
+            <li>Linux</li>
+            <li>Git/Github</li>
+            <li>AWS</li>
+            <li>Terraform</li>
+            <li>Ansible</li>
+            <li>GitHub Actions</li>
+            <li>Packer</li>
+            <li>Vault</li>
+            <li>Docker</li>
+            <li>Kubernetes</li>
+            <li>EKS</li>
+            <li>Argocd</li>
+            <li>Security</li>
+            <li>Datadog</li>
+            <li>Prometheus/Grafana</li>
+            <li>Scripting</li>
+        </ul>
+
+        <h3>Projects</h3>
+        <ol>
+            <li><a href="EBS-VOLUME.html">EBS VOLUME</a></li>
+            <li>SERVER RESCUE USING EBS CONCEPT</li>
+            <li>CONFIGURE VPC ENDPOINT</li>
+            <li>VPC PEERING</li>
+            <li>EFS FILE SYSTEM</li>
+            <li>ANSIBLE MODULES</li>
+        </ol>
+
+        <a href="Hobbies.html">Hobbies</a>
+        <br>
+        <a href="Contact.html">Contact</a>
+    </div>
 </div>
+
 <footer>
     <br>
     <hr>
-    Copyright @2025 - All right reserved
+    &copy; 2025 - All rights reserved
 </footer>
 
 </body>
