--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div class="test">
     <div>
-        <img src="./images/img.png" height="250" />
+        <img src="images/img.png" height="250" />
         <h2>Summary</h2>
         <p>
             My name is Ifeanyi Anthony Emereonyekwe, and I’m a DevOps Engineer specializing in streamlining development pipelines, automating infrastructure, and optimizing CI/CD workflows. I’ve worked extensively with tools such as Docker, Kubernetes, Terraform, Packer, Ansible, Vault, Git/GitHub, and GitHub Actions, as well as cloud platforms like AWS. My focus is on building scalable, secure systems and enhancing team efficiency through automation and best practices.
