--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <div class="test">
     <div>
-        <img src="images/img.png" height="250" />
+        <img src="images/img.png" height="250" /><hr>
         <h2>Summary</h2>
         <p>
-            My name is Ifeanyi Anthony Emereonyekwe, and I’m a DevOps Engineer specializing in streamlining development pipelines, automating infrastructure, and optimizing CI/CD workflows. I’ve worked extensively with tools such as Docker, Kubernetes, Terraform, Packer, Ansible, Vault, Git/GitHub, and GitHub Actions, as well as cloud platforms like AWS. My focus is on building scalable, secure systems and enhancing team efficiency through automation and best practices.
-        </p>
+            My name is Ifeanyi Anthony Emereonyekwe, and I’m a DevOps Engineer with WemaDevOps. I specialize in streamlining development pipelines, automating infrastructure, and optimizing CI/CD workflows. I’ve worked extensively with tools such as Docker, Kubernetes, Terraform, Packer, Ansible, Vault, Git/GitHub, and GitHub Actions, as well as cloud platforms like AWS. My focus is on building scalable, secure systems and enhancing team efficiency through automation and best practices.
+        </p><hr>
 
         <h2>Skills</h2>
         <ul>
@@ -36,7 +36,7 @@
             <li>Datadog</li>
             <li>Prometheus/Grafana</li>
             <li>Scripting</li>
-        </ul>
+        </ul><hr>
 
         <h3>Projects</h3>
         <ol>
