--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<a href="Hobbies.html">Hobbies</a>
+<a href="Contact.html">Contact</a>
+<a href="About.html">About</a>
+<a href="Project.html">Project</a>
+<a href="Experience.html">Experience</a>
+<a href="Skills.html">Skills</a>
+<a href="Education.html">Education</a>
+<a href="Reference.html">Reference</a>
 
 <div class="test">
     <div>
@@ -48,9 +56,6 @@
             <li>ANSIBLE MODULES</li>
         </ol>
 
-        <a href="Hobbies.html">Hobbies</a>
-        <br>
-        <a href="Contact.html">Contact</a>
     </div>
 </div>
 
