--- a/index.html
+++ b/index.html
@@ -2,69 +2,73 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ifeanyi Eze Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<a href="Hobbies.html">Hobbies</a>
-<a href="Contact.html">Contact</a>
-<a href="About.html">About</a>
-<a href="Project.html">Project</a>
-<a href="Experience.html">Experience</a>
-<a href="Skills.html">Skills</a>
-<a href="Education.html">Education</a>
-<a href="Reference.html">Reference</a>
 
+<!-- Navigation -->
+<nav id="info">
+    <a href="Hobbies.html">Hobbies</a>
+    <a href="Contact.html">Contact</a>
+    <a href="About.html">About</a>
+    <a href="Project.html">Project</a>
+    <a href="Experience.html">Experience</a>
+    <a href="Skills.html">Skills</a>
+    <a href="Education.html">Education</a>
+    <a href="Reference.html">Reference</a>
+</nav>
+
+<!-- Main Content -->
 <div class="test">
-    <div>
-        <img src="images/img.png" height="250" /><hr>
-        <h2>Summary</h2>
-        <p>
-            My name is Ifeanyi Anthony Emereonyekwe, and I’m a DevOps Engineer with WemaDevOps. I specialize in streamlining development pipelines, automating infrastructure, and optimizing CI/CD workflows. I’ve worked extensively with tools such as Docker, Kubernetes, Terraform, Packer, Ansible, Vault, Git/GitHub, and GitHub Actions, as well as cloud platforms like AWS. My focus is on building scalable, secure systems and enhancing team efficiency through automation and best practices.
-        </p><hr>
+    <img src="images/img.png" alt="Profile Picture" height="250" />
+    <hr>
 
-        <h2>Skills</h2>
-        <ul>
-            <li>Linux</li>
-            <li>Git/Github</li>
-            <li>AWS</li>
-            <li>Terraform</li>
-            <li>Ansible</li>
-            <li>GitHub Actions</li>
-            <li>Packer</li>
-            <li>Vault</li>
-            <li>Docker</li>
-            <li>Kubernetes</li>
-            <li>EKS</li>
-            <li>Argocd</li>
-            <li>Security</li>
-            <li>Datadog</li>
-            <li>Prometheus/Grafana</li>
-            <li>Scripting</li>
-        </ul><hr>
+    <h2>Summary</h2>
+    <p>
+        My name is Ifeanyi Anthony Emereonyekwe, and I’m a DevOps Engineer with WemaDevOps. I specialize in streamlining development pipelines, automating infrastructure, and optimizing CI/CD workflows. I’ve worked extensively with tools such as Docker, Kubernetes, Terraform, Packer, Ansible, Vault, Git/GitHub, and GitHub Actions, as well as cloud platforms like AWS. My focus is on building scalable, secure systems and enhancing team efficiency through automation and best practices.
+    </p>
+    <hr>
 
-        <h3>Projects</h3>
-        <ol>
-            <li><a href="EBS-VOLUME.html">EBS VOLUME</a></li>
-            <li>SERVER RESCUE USING EBS CONCEPT</li>
-            <li>CONFIGURE VPC ENDPOINT</li>
-            <li>VPC PEERING</li>
-            <li>EFS FILE SYSTEM</li>
-            <li>ANSIBLE MODULES</li>
-        </ol>
+    <h2>Skills</h2>
+    <ul>
+        <li>Linux</li>
+        <li>Git/GitHub</li>
+        <li>AWS</li>
+        <li>Terraform</li>
+        <li>Ansible</li>
+        <li>GitHub Actions</li>
+        <li>Packer</li>
+        <li>Vault</li>
+        <li>Docker</li>
+        <li>Kubernetes</li>
+        <li>EKS</li>
+        <li>ArgoCD</li>
+        <li>Security</li>
+        <li>Datadog</li>
+        <li>Prometheus/Grafana</li>
+        <li>Scripting</li>
+    </ul>
+    <hr>
 
-    </div>
+    <h3>Projects</h3>
+    <ol>
+        <li><a href="EBS-VOLUME.html">EBS Volume</a></li>
+        <li>Server Rescue Using EBS Concept</li>
+        <li>Configure VPC Endpoint</li>
+        <li>VPC Peering</li>
+        <li>EFS File System</li>
+        <li>Ansible Modules</li>
+    </ol>
 </div>
 
+<!-- Footer -->
 <footer>
-    <br>
     <hr>
-    &copy; 2025 - All rights reserved
+    <p style="text-align: center;">&copy; 2025 - All rights reserved</p>
 </footer>
 
 </body>
 </html>
-`
