--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <a href="Skills.html">Skills</a>
     <a href="Education.html">Education</a>
     <a href="Reference.html">Reference</a>
+    <a href="sample.html">sample</a>
 </nav>
 
 <!-- Main Content -->
@@ -31,37 +32,6 @@
         My name is Ifeanyi Anthony Emereonyekwe, and I’m a DevOps Engineer with WemaDevOps. I specialize in streamlining development pipelines, automating infrastructure, and optimizing CI/CD workflows. I’ve worked extensively with tools such as Docker, Kubernetes, Terraform, Packer, Ansible, Vault, Git/GitHub, and GitHub Actions, as well as cloud platforms like AWS. My focus is on building scalable, secure systems and enhancing team efficiency through automation and best practices.
     </p>
     <hr>
-
-    <h2>Skills</h2>
-    <ul>
-        <li>Linux</li>
-        <li>Git/GitHub</li>
-        <li>AWS</li>
-        <li>Terraform</li>
-        <li>Ansible</li>
-        <li>GitHub Actions</li>
-        <li>Packer</li>
-        <li>Vault</li>
-        <li>Docker</li>
-        <li>Kubernetes</li>
-        <li>EKS</li>
-        <li>ArgoCD</li>
-        <li>Security</li>
-        <li>Datadog</li>
-        <li>Prometheus/Grafana</li>
-        <li>Scripting</li>
-    </ul>
-    <hr>
-
-    <h3>Projects</h3>
-    <ol>
-        <li><a href="EBS-VOLUME.html">EBS Volume</a></li>
-        <li>Server Rescue Using EBS Concept</li>
-        <li>Configure VPC Endpoint</li>
-        <li>VPC Peering</li>
-        <li>EFS File System</li>
-        <li>Ansible Modules</li>
-    </ol>
 </div>
 
 <!-- Footer -->
