--- a/sample.html
+++ b/sample.html
@@ -5,19 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Project</title>
+    <title>Family Tree</title>
 </head>
 <body>
-<h3>Projects</h3>
-<ol>
-    <li><a href="EBS-VOLUME.html">EBS Volume</a></li>
-    <li>Server Rescue Using EBS Concept</li>
-    <li>Configure VPC Endpoint</li>
-    <li>VPC Peering</li>
-    <li>EFS File System</li>
-    <li>Ansible Modules</li>
-</ol>
 <a href="index.html">Home</a>
-
 </body>
 </html>
